Use release versions

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 
 
   <properties>
-    <tomee.version>8.0.3-SNAPSHOT</tomee.version>
+    <tomee.version>8.0.3</tomee.version>
     <tomee.build.name>${project.groupId}.tomee.tomee</tomee.build.name>
     <webprofile.work-dir>${project.build.directory}/webprofile-work-dir</webprofile.work-dir>
     <plus.work-dir>${project.build.directory}/plus-work-dir</plus.work-dir>
@@ -366,7 +366,7 @@
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
         <artifactId>tomee-patch-plugin</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.1</version>
         <configuration>
           <select>apache-tomee.*\.zip</select>
         </configuration>
