--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <relativePath><!--Resolve on repository--></relativePath>
   </parent>
 
-  <groupId>org.apache.tomee</groupId>
+  <groupId>org.apache.tomee.jakarta</groupId>
   <artifactId>apache-tomee</artifactId>
   <packaging>jar</packaging>
   <version>9.0.0-M1-SNAPSHOT</version>
