--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 
   <dependencies>
     <dependency> <!-- to be sure to have it -->
-      <groupId>${project.groupId}</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>apache-tomee</artifactId>
       <version>${tomee.version}</version>
       <classifier>webprofile</classifier>
@@ -106,7 +106,7 @@
       </exclusions>
     </dependency>
     <dependency> <!-- to be sure to have it -->
-      <groupId>${project.groupId}</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>apache-tomee</artifactId>
       <version>${tomee.version}</version>
       <classifier>microprofile</classifier>
@@ -120,7 +120,7 @@
       </exclusions>
     </dependency>
     <dependency> <!-- to be sure to have it -->
-      <groupId>${project.groupId}</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>apache-tomee</artifactId>
       <version>${tomee.version}</version>
       <classifier>plume</classifier>
@@ -134,7 +134,7 @@
       </exclusions>
     </dependency>
     <dependency> <!-- to be sure to have it -->
-      <groupId>${project.groupId}</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>apache-tomee</artifactId>
       <version>${tomee.version}</version>
       <classifier>plus</classifier>
