Update to latest 8 snapshot

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 
 
   <properties>
-    <tomee.version>8.0.5</tomee.version>
+    <tomee.version>8.0.6-SNAPSHOT</tomee.version>
     <tomee.build.name>${project.groupId}.tomee.tomee</tomee.build.name>
     <webprofile.work-dir>${project.build.directory}/webprofile-work-dir</webprofile.work-dir>
     <plus.work-dir>${project.build.directory}/plus-work-dir</plus.work-dir>
