--- a/pom.xml
+++ b/pom.xml
@@ -351,9 +351,9 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.tomitribe.transformer</groupId>
-        <artifactId>org.eclipse.transformer.maven</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <groupId>org.eclipse.transformer</groupId>
+        <artifactId>org.eclipse.transformer</artifactId>
+        <version>0.2.0</version>
         <executions>
           <execution>
             <goals>
@@ -362,6 +362,9 @@
             <phase>package</phase>
           </execution>
         </executions>
+        <configuration>
+          <direct>${project.basedir}/src/main/resources/org/eclipse/transformer/jakarta/jakarta-direct.properties</direct>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
