Don't replace namespaces. They must be handled by TomEE so we can still read previous namespaces

--- a/src/main/resources/org/tomitribe/transformer/jakarta/jakarta-direct.properties
+++ b/src/main/resources/org/tomitribe/transformer/jakarta/jakarta-direct.properties
@@ -12,10 +12,10 @@
 # Note: Package renames also update string constants in .class files.
 
 # No exact string updates are currently specified.
-http\://java.sun.com/xml/ns/persistence=https://jakarta.ee/xml/ns/persistence
-http\://java.sun.com/xml/ns/javaee=https://jakarta.ee/xml/ns/jakartaee
-http\://java.sun.com/xml/ns/persistence/orm=https://jakarta.ee/xml/ns/persistence/orm
-http\://java.sun.com/xml/ns/jaxb=https://jakarta.ee/xml/ns/jaxb
+# http\://java.sun.com/xml/ns/persistence=https://jakarta.ee/xml/ns/persistence
+# http\://java.sun.com/xml/ns/javaee=https://jakarta.ee/xml/ns/jakartaee
+# http\://java.sun.com/xml/ns/persistence/orm=https://jakarta.ee/xml/ns/persistence/orm
+# http\://java.sun.com/xml/ns/jaxb=https://jakarta.ee/xml/ns/jaxb
 
 javax.activation.addreverse=jakarta.activation.addreverse
 javax.activation.debug=jakarta.activation.debug
