--- a/tomee/tomee-webprofile-webapp/pom.xml
+++ b/tomee/tomee-webprofile-webapp/pom.xml
@@ -35,6 +35,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -118,6 +124,27 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <tstamp>
+                  <format property="TSTAMP" pattern="hh:mm" />
+                </tstamp>
+                <replace file="target/classes/openejb-version.properties" token="@DATE-REPLACED-BY-MAVEN@" value="${DSTAMP}" />
+                <replace file="target/classes/openejb-version.properties" token="@TIME-REPLACED-BY-MAVEN@" value="${TSTAMP}" />
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.eclipse.transformer</groupId>
         <artifactId>org.eclipse.transformer.maven</artifactId>
         <version>0.2.0</version>
@@ -146,6 +173,9 @@
           <sourceExcludes>
             <exclude>org/apache/cxf</exclude>
           </sourceExcludes>
+          <replacements>
+            <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
+          </replacements>
         </configuration>
         <executions>
           <execution>
