--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
     <mojarra.version>3.0.0</mojarra.version>
     <myfaces.version>2.3.8</myfaces.version>
     <openjpa.version>3.1.2</openjpa.version>
-    <openwebbeans.version>2.0.22-SNAPSHOT</openwebbeans.version>
+    <openwebbeans.version>2.0.22</openwebbeans.version>
     <org.apache.activemq.version>5.16.1</org.apache.activemq.version>
     <quartz-openejb-shade.version>2.2.4</quartz-openejb-shade.version>
     <slf4j.version>1.7.21</slf4j.version>
