Move patch files and transformer config into `transform` module

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
   <modules>
     <module>boms</module>
     <module>tomee</module>
+    <module>transform</module>
   </modules>
 
   <dependencyManagement>
