--- a/tomee/tomee-plume-webapp/pom.xml
+++ b/tomee/tomee-plume-webapp/pom.xml
@@ -266,8 +266,15 @@
         </executions>
         <configuration>
           <overwrite>true</overwrite>
-<!--          <rulesDirectUri>/org/tomitribe/transformer/jakarta/jakarta-direct.properties</rulesDirectUri>-->
+          <rulesDirectUri>/org/tomitribe/transformer/jakarta/jakarta-direct.properties</rulesDirectUri>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.tomee</groupId>
+            <artifactId>transform</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
@@ -276,7 +283,7 @@
         <configuration>
           <select>tomee-plume-webapp-transformed-.*\.war</select>
           <patchSources>
-            <source>${project.basedir}/../../src/patch/java/</source>
+            <source>${project.basedir}/../../transform/src/patch/java/</source>
             <source>${project.basedir}/src/patch/java/</source>
           </patchSources>
           <replacements>
