--- a/transform/pom.xml
+++ b/transform/pom.xml
@@ -16,23 +16,22 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
+<!-- $Rev$ $Date$ -->
 
-<!-- $Rev: 576067 $ $Date: 2007-09-16 03:17:08 -0700 (Sun, 16 Sep 2007) $ -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-<assembly>
-  <id>tomee-webprofile</id>
-  <formats>
-    <format>zip</format>
-  </formats>
-  <includeBaseDirectory>false</includeBaseDirectory>
-  <fileSets>
-    <fileSet>
-      <directory>${webprofile.work-dir}/apache-tomee-webprofile-${tomee.version}</directory>
-      <outputDirectory>/apache-tomee-webprofile-${project.version}</outputDirectory>
-      <includes>
-        <include>**/*</include>
-      </includes>
-    </fileSet>
-  </fileSets>
-</assembly>
+  <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.apache.tomee</groupId>
+    <artifactId>tomee-project</artifactId>
+    <version>9.0.0-M7-SNAPSHOT</version>
+  </parent>
+
+  <artifactId>transform</artifactId>
+  <packaging>jar</packaging>
+  <name>TomEE :: Transform</name>
+  <description>Patches for TomEE Patch Plugin and Rules associated with the Eclipse Transformer</description>
+
+</project>
 
