--- a/tomee/tomee-plus-webapp/pom.xml
+++ b/tomee/tomee-plus-webapp/pom.xml
@@ -250,8 +250,15 @@
         </executions>
         <configuration>
           <overwrite>true</overwrite>
-<!--          <rulesDirectUri>/org/tomitribe/transformer/jakarta/jakarta-direct.properties</rulesDirectUri>-->
+          <rulesDirectUri>/org/tomitribe/transformer/jakarta/jakarta-direct.properties</rulesDirectUri>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.tomee</groupId>
+            <artifactId>transform</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
@@ -260,7 +267,7 @@
         <configuration>
           <select>tomee-plus-webapp-transformed-.*\.war</select>
           <patchSources>
-            <source>${project.basedir}/../../src/patch/java/</source>
+            <source>${project.basedir}/../../transform/src/patch/java/</source>
           </patchSources>
           <replacements>
             <openejb-version.properties>${project.build.outputDirectory}/openejb-version.properties</openejb-version.properties>
