--- a/tomee/tomee-webprofile-webapp/pom.xml
+++ b/tomee/tomee-webprofile-webapp/pom.xml
@@ -158,8 +158,15 @@
         </executions>
         <configuration>
           <overwrite>true</overwrite>
-<!--          <rulesDirectUri>/org/tomitribe/transformer/jakarta/jakarta-direct.properties</rulesDirectUri>-->
+          <rulesDirectUri>/org/tomitribe/transformer/jakarta/jakarta-direct.properties</rulesDirectUri>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.tomee</groupId>
+            <artifactId>transform</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.apache.tomee.patch</groupId>
@@ -168,7 +175,7 @@
         <configuration>
           <select>tomee-webprofile-webapp-transformed-.*\.war</select>
           <patchSources>
-            <source>${project.basedir}/../../src/patch/java/</source>
+            <source>${project.basedir}/../../transform/src/patch/java/</source>
           </patchSources>
           <sourceExcludes>
             <exclude>org/apache/cxf</exclude>
