--- a/pom.xml
+++ b/pom.xml
@@ -1127,7 +1127,7 @@
       <dependency>
         <groupId>org.apache.tomee</groupId>
         <artifactId>taglibs-shade</artifactId>
-        <version>${project.version}</version>
+        <version>${tomee.version}</version>
         <exclusions>
           <exclusion>
             <groupId>*</groupId>
