--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
     <version.groovy>2.4.12</version.groovy>
     <version.hsqldb>2.3.2</version.hsqldb>
     <version.javaee-api>8.0-5</version.javaee-api>
+    <version.xalan>2.7.2</version.xalan>
     <xbeanVersion>4.14</xbeanVersion>
 
     <webprofile.work-dir>${project.build.directory}/webprofile-work-dir</webprofile.work-dir>
