More refined profile just for plume

--- a/tomee/pom.xml
+++ b/tomee/pom.xml
@@ -51,6 +51,7 @@
     <profile>
       <id>plume</id>
       <modules>
+        <module>tomee-webprofile-webapp</module>
         <module>tomee-plume-webapp</module>
         <module>apache-tomee</module>
       </modules>
